# create-taux-app

./: .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: npm-publish.yml
apps/cli/: .gitignore  package.json
apps/cli/src/: index.ts  installer.ts  utils.ts
apps/cli/template/src-tauri/: Cargo.toml  tauri.conf.json
apps/cli/template/src-tauri/parser/: Cargo.toml
apps/cli/template/src-tauri/parser/src/: lib.rs
apps/cli/template/src/components/ui/: button.tsx  label.tsx  tooltip.tsx
apps/cli/template/src/hooks/: use-rust.ts
apps/cli/template/src/pages/: _app.tsx
apps/cli/template/src/types/: rust.ts
apps/docs/: package.json  theme.config.tsx
apps/docs/pages/: getting-started.mdx  index.mdx
cli/: README.md  package.json  tsconfig.json
cli/src/: const.ts  index.ts  utils.ts
cli/template/: package.json  tailwind.config.ts
cli/template/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
cli/template/src-tauri/src/: commands.rs  main.rs  parser.rs  utils.rs
cli/template/src/components/ui/: scroll-area.tsx
cli/template/src/hooks/: use-global-shortcut.ts  use-rust.ts
cli/template/src/pages/: index.tsx
cli/template/src/styles/: globals.css
cli/template/src/types/: rust.ts
docs/: next.config.js  package.json  theme.config.tsx
docs/components/: package-manager-tabs.tsx
docs/pages/: getting-started.mdx  index.mdx
